@@ -1015,7 +1015,7 @@ foreach ($assigns as $assign) {
             $assign['description'],
             $assign['promotion_name'],
             $assign['promotion_schema_name'],
-            $assign['promotion_schema_length'],
+            empty($assign['promotion_schema_length']) ? trans('indefinite period') : trans('$a months', $assign['promotion_schema_length']),
             $forward_periods[$p],
             $current_month,
             $current_period,
@@ -1494,7 +1494,7 @@ foreach ($assigns as $assign) {
                         $period,
                         $assign['promotion_name'],
                         $assign['promotion_schema_name'],
-                        $assign['promotion_schema_length'],
+                        empty($assign['promotion_schema_length']) ? trans('indefinite period') : trans('$a months', $assign['promotion_schema_length']),
                         $current_month,
                         $current_period,
                         $next_period,
